# user_account

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: flow_branch_test.yaml  flow_ci_cd.yaml  job_build_push.yaml  job_deploy.yaml  job_server_environ.yaml  job_tests.yaml
alembic/: env.py
alembic/versions/: 0f896785ee30_migration_1.py  427bdf8e93fb_migration_1.py  45292cd56382_migration_1.py  7226808cd539_migration_1.py  98dd87e335c1_migration_1.py  9c1a7f7cfdf1_migration_1.py  cc786b6a8da7_migration_1.py  dcd4363b06a8_migration_1.py  e9abf40ff432_migration_1.py  f03e74ab54df_migration_1.py
dev_tools/: main.py
dev_tools/api/: development.py
dev_tools/pre_load/: factories.py  load_db.py
docker/base/: backend.yaml  db.yaml  swag.yaml
docker/dev/: Dockerfile  docker-compose.yaml  test.docker-compose.yaml
docker/prod/: docker-compose.yaml  nginx.conf
k8s/: docker-python-kubernetes.yaml
readme/: README.Bot.md  README.Docker.md  README.FastAPI.md  README.Kubernetes.md  README.Venv.md
src/: config.py  main.py  models.py  schemas.py  services.py
src/api/: dependencies.py  exceptions.py
src/api/endpoints/: admin.py  development.py  transaction.py  user.py  webhook.py
src/auth/: config.py  schemas.py
src/auth/api/: dependencies.py
src/auth/services/: password.py  token.py  user.py
src/auth_user/: config.py  dependencies.py  exceptions.py  models.py
src/auth_user/endpoints/: __init__.py  admin.py  auth.py  development.py  user.py
src/auth_user/schemas/: token.py  user.py
src/auth_user/services/: password.py  token.py  user.py
src/bot/: __main__.py
src/fastapi/: main.py
src/models/: __init__.py  log.py  models.py  secret.py  task.py  user.py  utils.py
src/n_toolkit/: utils.py
src/pre_load/: factories.py  load_db.py  log.py  models.py
src/schemas/: account.py  log.py  payment.py  secret.py  task.py  user.py
src/services/: cipher.py  log.py  secret.py  service.py  service_non_fastapi.py  standard.py  standard_fastapi.py  user.py
tests/: conftest.py
tests/fixtures/: fixtures.py  test_fixtures.py  test_fixtures_api.py  testdata.py  testtools.py  utils.py
tests/integration_tests/: test_0_transaction.py  test_1_healthcheck.py  test_2_anonimous_user.py  test_2_login.py  test_3_anonimous_user.py  test_3_api_auth.py  test_4_authorized_user.py  test_5_admin.py  test_6_transaction.py  test_7_scenario.py  test_scenario_secret.py  utils.py
tests/unit_tests/: test_configs.py  test_repos.py  test_signature.py
toolkit/services/: service_session_dependent.py
(+24 files in other folders)
